Implemented the DrugAmountMatchJudge and completed testing on dosage-related judges